--- a/content/thoughts/2024-01-24 seeds.md
+++ b/content/thoughts/2024-01-24 seeds.md
@@ -4,8 +4,6 @@ date: 2024-01-24
 tags:
   - seeds
 ---
-
-
 Contemplating positionlessness
 
 - most things are arguably changeable
@@ -44,8 +42,8 @@ Keep a study log (something like Andy's work log). This will be in lieu of your 
 
 What to share to Andrew:
 
-1. Part I is helping me understand better how to think about my past and perhaps inform the next Baguio walks I will take.
-2. Part II and III will have to wait, but they're making me think about what I want to do with my life. When I was a JW, it was so clear what I want to become: A missionary. Now even after 14 years, I still feel like I haven't made a clear commitment. There are tiny commitments (like I do want to continue writing, walking, photography, and studying philosophy (and because of you, religion and spirituality again). But it is still unclear how these things should add up. I call myself a writer to be safe (since it is what I mostly do). And lately, I'm even feeling some desire to return to some form of "ministry" i.e. working directly with people like I used to do with the Deaf which is different from the usually solitary work which is involved in the activities I listed above.
+1. Part II is helping me understand better how to think about my past and perhaps inform the next Baguio walks I will take.
+2. Part III and IV will have to wait, but they're making me think about what I want to do with my life. When I was a JW, it was so clear what I want to become: A missionary. Now even after 14 years, I still feel like I haven't made a clear commitment. There are tiny commitments (like I do want to continue writing, walking, photography, and studying philosophy (and because of you, religion and spirituality again). But it is still unclear how these things should add up. I call myself a writer to be safe (since it is what I mostly do). And lately, I'm even feeling some desire to return to some form of "ministry" i.e. working directly with people like I used to do with the Deaf which is different from the usually solitary work which is involved in the activities I listed above.
 
 I admit, I haven't returned to the resources you sent during our first call. And I know I should start reading Imaoka's writings sooner rather than later. And yet this article you wrote is so good I am thinking about going deeper and reading the sources you mentioned.
 
