--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -67,3 +67,5 @@ draft: true
 [[daily notes/2024-01-08|2024-01-08]]: [[project archives/baguio walk/baguio walk|baguio walk]] initial plan
 
 [[2024-01-24]]: [[voluntary simplicity]]; must-haves for [[thoughts/my daily routine|my daily routine]]; projects to focus on February; each morning as a new dig; Letting go of diary writing
+[[2024-01-25]]: Mind map exercises with Lea
+[[2024-01-26]]: Odyssey plans 2
