--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -65,6 +65,7 @@ draft: true
 
 [[2024-01-01]]: The first day of 2024
 [[daily notes/2024-01-08|2024-01-08]]: [[project archives/baguio walk/baguio walk|baguio walk]] initial plan
+[[2024-01-10]]: Missive 1 intro draft
 
 [[2024-01-22]]: Sitting on the balcony at Cablong; Thinking about whether to pursue serious religious studies
 [[2024-01-24]]: [[voluntary simplicity]]; must-haves for [[thoughts/my daily routine|my daily routine]]; projects to focus on February; each morning as a new dig; Letting go of diary writing
