--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -71,3 +71,4 @@ draft: true
 [[2024-01-24]]: [[voluntary simplicity]]; must-haves for [[thoughts/my daily routine|my daily routine]]; projects to focus on February; each morning as a new dig; Letting go of diary writing
 [[2024-01-25]]: Mind map exercises with Lea
 [[2024-01-26]]: Odyssey plans 2
+[[2024-01-30]]: [[thoughts/walking as writing methodology|walking as writing methodology]]; launch a photo walk group
