--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -50,6 +50,7 @@ draft: true
 [[2023-12-01]]: A recap of November and some intentions for December 2023
 [[2023-12-02]]: Some thoughts on how to do the upcoming weeklong walk at LB
 [[2023-12-03]]: Draft of intro to [[project archives/roots x gravel/roots x gravel|roots x gravel]]
+[[2023-12-07]]: [[private/nspc|nspc]]
 
 [[2023-12-11]]: Things I learned from [[project archives/roots x gravel/roots x gravel]] concerning photography, writing, and walking.
 
