--- a/content/essays/uman 2022-02.md
+++ b/content/essays/uman 2022-02.md
@@ -15,7 +15,7 @@ sr-ease: 250
 
 February has faded. March has come.
 
-This is [Uman](/tags/uman), a monthly newsletter of changes, now with a “logo-ish”—the tetragram for the word “change” ([𝌡](https://unicode-table.com/en/1D321/)) from the [*Tài Xuán Jīng*](https://en.wikipedia.org/wiki/Taixuanjing), chosen with no reason other than because it looks like a stout letter “U.”
+This is [Uman](tags/uman.md), a monthly newsletter of changes, now with a “logo-ish”—the tetragram for the word “change” ([𝌡](https://unicode-table.com/en/1D321/)) from the [*Tài Xuán Jīng*](https://en.wikipedia.org/wiki/Taixuanjing), chosen with no reason other than because it looks like a stout letter “U.”
 
 And that is what this newsletter is about—funny symbols—no, I mean… changes.
 
@@ -69,7 +69,7 @@ After migrating, I wrote a new [home page](https://vinceimbat.com/) and [about p
 
 ### Lilim
 
-After migrating my site to Hugo, I included some new content. [Lilim](tags/lilim), my now archived newsletter, has its second season fully uploaded to the site. I also added a previously unpublished season 1 issue, [[essays/autonomy makes a long life|Lilim 01(05) — Autonomy Makes a Long Life]], a fully updated account about the free birth process of a couple I was privileged to meet last year.
+After migrating my site to Hugo, I included some new content. [Lilim](tags/lilim.md), my now archived newsletter, has its second season fully uploaded to the site. I also added a previously unpublished season 1 issue, [[essays/autonomy makes a long life|Lilim 01(05) — Autonomy Makes a Long Life]], a fully updated account about the free birth process of a couple I was privileged to meet last year.
 
 ## Others
 
