--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -65,9 +65,12 @@ draft: true
 [[2023-12-31]]: Genre-less writing; 2024 as the year to write the book about LB; Reflections on the nagging mom outside my window
 
 [[2024-01-01]]: The first day of 2024
+[[2024-01-04]]: Insights from reading BBJ; reading just a select few over and over again; reviews can be difficult
+
+[[2024-01-07]]: 2024's first act of faith; Leaving Tungko
 [[daily notes/2024-01-08|2024-01-08]]: [[project archives/baguio walk/baguio walk|baguio walk]] initial plan
 [[2024-01-10]]: Missive 1 intro draft
-
+[[2024-01-17]]: Draft for [[essays/tall tales day 3|tall tales day 3]]
 [[2024-01-22]]: Sitting on the balcony at Cablong; Thinking about whether to pursue serious religious studies
 [[2024-01-24]]: [[voluntary simplicity]]; must-haves for [[thoughts/my daily routine|my daily routine]]; projects to focus on February; each morning as a new dig; Letting go of diary writing
 [[2024-01-25]]: Mind map exercises with Lea
