--- a/content/thoughts/2024-01-07 seeds.md
+++ b/content/thoughts/2024-01-07 seeds.md
@@ -4,7 +4,7 @@ date: 2024-01-07
 tags:
   - seeds
 ---
-They wanted me to return. Oh I told them dont you worry. Return I shall.
+They wanted me to return. Oh I told them don't you worry. Return I shall.
 
 ***
 
