--- a/content/thoughts/2024-01-20 seeds.md
+++ b/content/thoughts/2024-01-20 seeds.md
@@ -4,10 +4,13 @@ date: 2024-01-20
 tags:
   - seeds
 ---
+- [[neutrality is impossible]]
+- [[free religion needs some grounding]]
+
 Might need a bit of reintegration, so stay here a bit. I could do a walk of sorts.
 
 Other things to do:
-- return to photographs (rewalking photographs to un-earth histories of my faith).
+- return to photographs (re-walking photographs to un-earth histories of my faith).
 - try to talk to Mama about it.
 
 How do we exist among those who are different from us? Should we welcome difference? Is there a limit to this? Do we set a boundary? Or is our openness boundless?
@@ -25,7 +28,7 @@ Refocusing priorities
 2. Writing
 3. Lea's life and business (life design -> website)
 
-Whats a subsistent spirituality look like? Waht myst be developed?
+Whats a subsistent spirituality look like? What must be developed?
 
 Perhaps stop thinking about ministry for a while.
 
@@ -36,7 +39,7 @@ But the priority is understanding how to be - how to live.
 
 Although I appreciate it, I have very little control of the design of my current site.
 
-To create a subsistent spirituality, have a few rules to ground yourself (bind yoursef).
+To create a subsistent spirituality, have a few rules to ground yourself (bind yourself).
 
 No rules but a few grounding ones:
 
