--- a/content/thoughts/2024-01-23 seeds.md
+++ b/content/thoughts/2024-01-23 seeds.md
@@ -4,4 +4,4 @@ date: 2024-01-23
 tags:
   - seeds
 ---
-Any idea no matter how it claims to be liberating could be oppressive when it claims to be right at all times.
+Any idea no matter how it claims to be liberating could be oppressive when it claims to be right at all time.
