--- a/content/thoughts/2024-01-24 seeds.md
+++ b/content/thoughts/2024-01-24 seeds.md
@@ -4,6 +4,8 @@ date: 2024-01-24
 tags:
   - seeds
 ---
+- [[man without a position]]
+
 Contemplating positionlessness
 
 - most things are arguably changeable
@@ -35,8 +37,8 @@ Because of this, it's important to say No and block out distractions at this tim
 
 Study direction for tomorrow:
 1. Return to highlights of the AJB article and process them.
-2. Think how to apply the framework in Part I in your conversion history.
-3. Think about how to adopt Part II and IV into the spirituality you are nurturing.
+2. Think how to apply the framework in Part II in your conversion history.
+3. Think about how to adopt Part III and IV into the spirituality you are nurturing.
 
 Keep a study log (something like Andy's work log). This will be in lieu of your diary perhaps.
 
