--- a/content/thoughts/2024-01-26 seeds.md
+++ b/content/thoughts/2024-01-26 seeds.md
@@ -12,7 +12,7 @@ What am I sure of?
 
 Unsure
 Writing
-- will conducting writing workshops be something I want to do? (Ask Maui for advice on conducting my first workshop.)
+- Will conducting writing workshops be something I want to do? (Ask Maui for advice on conducting my first workshop.)
 - Should I get an additional degree?
 - Should I teach at the university?
 
