--- a/content/essays/uman 2024-01.md
+++ b/content/essays/uman 2024-01.md
@@ -6,45 +6,58 @@ tags:
   - uman
 draft: false
 ---
-## Looking Back at 2023
+![Older women sitting on the sidewalk](essays/images/20240114-013853-tall-tales-igorots_IG.jpg)
 
-Wrote and published the last Uman issue for 2023: [[essays/uman 2023-12|uman 2023-12]]
+Each shadow  
+shortens  
+all morning long  
+until it vanishes  
+into the small dent of noon  
+and the builders of shadows pause.  
 
-Worked on writing [[essays/2023 annual review|2023 annual review]]
+— Gary Whited, "Shadow Builders"
+***
 
-Realized that authenticity and focus will be my main themes this year
+Welcome to 2024's first issue of Uman, a word that means "change" and which I've been using to collate ideas, verses, images, and conversations in the past 30 days. Writing this "report" helps me keep track of any progress I make in this long walk of mine, a sort of written photograph of my intellectual and aesthetic footprints. I'm still unsure whether this is of any value to you (can you let me know if it does?). At the very least, I hope it could be a lovely quick weekend reading for you.
 
-## Tall Tales
+# Looking Back
 
-Call with Louise Far regarding how to approach the Baguio Walk.
-Modified the plan based on consultation with Louise Far.
-Finalized the list of routes for the Baguio walk.
-Finished Tall Tales poster and IG post and shared them in IG.
+On the first week of January 2024, I took some time to write [[essays/uman 2023-12|the final issue of Uman for 2023]]. I also paused to look back at the year that just passed. This annual review has been a tradition I've kept for more than a decade, and it has helped me articulate the most important things to prioritize in the year ahead. After publishing my [[essays/2023 annual review|2023 annual review]], I knew authenticity and focus were my main themes for 2024.
 
-[Share poster here]
+# Walking Baguio
 
-Wrote an introduction: [[essays/baguio walk 1|baguio walk 1]]
+After finishing my annual review, I immediately shifted my attention to preparing for my [[tags/tall tales 1|week-long walk of Baguio]] from January 15 to 21. To consult about the design of the walk, I called [[thoughts/louise far|Louise Far]]. The first question she asked me was, *"How will you protect yourself while doing it?"* The question caught me by surprise. I knew the walk could be triggering, but I didn't consider this in my initial design.
 
-Did a total of three walks.
-Wrote five missives, including the closing essay.
-The most difficult walk was the first walk because it involved returning to the kingdom hall at Rimando.
-My favorite essay to write was the third walk. Because how I framed it only came to me the night before the walk. I told myself I'm going to write it as an epistolary essay and I'll be talking to one person in particular.
+My consultation with Louise convinced me to refocus the project from merely remembering to also returning and reimagining the places I'm revisiting. As I articulated in the [[essays/baguio walk 1|introduction]] to the walk, I decided to treat each walk like a meditation anchored in the present moment, which served as a refuge to potentially triggering memories and emotions.
 
-Best lessons I learned from Tall Tales
-- Use the present moment as an anchor when returning to places of gravity to protect yourself.
-- I am a kissa, a portal for people to experience something they long for. My words, writings, photographs, actions, and, more importantly, my presence bring the experience I want others to have, one that isn't always readily available in the world out there.
-- One day I want to encounter the people I left from my past not hiding but being my most authentic self.
-- Our beliefs shouldn't be what prevent us from communion. They should be what makes us thirsty for connection even with people who are different from us.
+![Tall Tales poster](essays/images/tall-tales-poster.jpg)
 
-## Nietzsche
+I did three walks and sent five missives, including the closing essay.
 
-- Re-read [[literature/the freedom to be tomorrow brown|The freedom to be tomorrow]] and processed its highlights.
-- Read [[literature/superficial out of profundity bearn|superficial out of profundity bearn]] and made highlights.
+- [[essays/tall tales day 1|Day 01 — Firsts]]
+- [[essays/tall tales day 2|Day 02 — Families]]
+- [[essays/tall tales day 3|Day 03 — A Walking Kissa]]
+- [[essays/tall tales day 4|Day 04 — Night]]
+- [[essays/tall tales end|The End (For Now)]]
 
-Most important realizations from studying Nietzsche's framework
-- Walking back to places from my past triggers emotions that inform me where I am in my healing journey.
-- Walking back to places from my past facilitates incorporation. It is only after incorporation can I say that my convalescence is done.
-- What makes me feel warm is engaging with existence, i.e., seeing how ordinary objects and events are portals to existential questions and emotions.
-- Without a metaphysical grounding, we see things as they really are as if for the first time, fragile and transient. This fragility makes them precious and draws us closer to us.
+I learned a lot about myself and my relationship with my religious past from these walks. The walks made me realize that I'm sincerely curious about what happened to the friends I left in the church and that I welcome any possible future encounters with them—encounters where I hope to be my most authentic self. The walks also strengthened my resolve to understand how I can best hold space for my neighbor, no matter how different their beliefs are from me.
 
-I wrote an essay to summarize my insights: [[essays/where the sun warms|Where the sun warms]].
+# Therapeutic Journey for the Free Spirit
+
+At the end of the Baguio walk, I spent about a week with my parents at Pangasinan. While there, I re-read [[thoughts/andrew j. brown|Andrew J. Brown's]] article ["The Freedom to Be Tomorrow What We Are Not Today](https://andrewjbrown.blogspot.com/2022/05/the-freedom-to-be-tomorrow-what-we-are.html), which contained a section about [[thoughts/friedrich nietzsche|Friedrich Nietzsche's]] four-phased journey for the free spirit. Andrew told me it might help me think about the Baguio walk. I also read the first chapter of Gordon Bearn's book *Waking to Wonder* (1997), entitled  [[literature/superficial out of profundity bearn|"Superficial—Out of Profundity,"]] which provided an enlightening description of the journey.
+
+Reading these two texts helped me understand that I'm still healing from leaving the JWs. To finish my healing process, I must recognize the things that brought warmth to me in my past life that I could still incorporate in my present life, albeit differently—things like faith, prayer, and ministry. Reading about the framework helped me understand that returning to places from my past brought out emotions that inform where I am in my healing journey and that walking to these places facilitates this process of incorporation.
+
+I realized that engaging with existence makes me feel warm, i.e., seeing how ordinary objects and events are portals to existential questions and emotions. Nietzsche helped me visualize a thriving life entirely outside the metaphysical tradition I inherited—a life where I see things as they are, as if for the first time, fragile and transient, and, therefore, precious and near. I wrote an essay ([[essays/where the sun warms|"Where the Sun Warms"]]) to summarize my insights from reading about the framework.
+
+***
+A few days before I left Pangasinan to return to Los Baños, I had dinner with my parents, my sister, her husband, and her husband's sister, who was visiting from Palawan. All of them were in the faith. While it wasn't the first time I'd broken bread with this group, the dinner had a different flavor, given my recent reading of Nietzsche.
+
+After hearing my brother-in-law say the prayer (which I listened to closely), I began asking questions to the group, questions that didn't avoid talking about their faith. I asked about friends I once had in the church, particularly the old ones, hoping most were still alive. I asked my sister and her husband how their friends in their congregations helped them in their wedding. I jokingly asked our guest from Palawan whether she had found any pleasing gentleman in the congregations she visited in the north. And then, when I felt like I needed to give them space to talk about the assembly they attended in the morning, I stood up and volunteered to do the dishes, listening to them nearby speak about people whose names I no longer recognize and subjects I no longer remember.
+
+The night went just fine. After seeing them off that night, I took a quick walk toward a nearby field, dried and cold as it is at this time of the year. I could hear the sound of a water pump nearby as I raised my head toward the sky adorned by Jupiter, Saturn, and the constellations. I stared there for a while.
+
+Healing isn't done yet. But the warmth I feel inside has been staying here longer—longer, even in the middle of days cold as these.
+
+***
+![Fern leaves](essays/images/20240114-012430-tall-tales-fern_IG.jpg)
