--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -37,7 +37,7 @@ draft: true
 [[2023-11-14]]: Writing as ministry; more ideas about [[thoughts/spiritual writing|spiritual writing]]; my work, play, love, and health dashboard
 [[2023-11-15]]: First group seiza session with Miki Nakura via Zoom; Formal invitation to create a moai; Consider returning to IG
 [[2023-11-17]]: [[essays/and i shall hear their hearts beating|Mount makiling trail]]
-[[2023-11-18]]: Updates for [[thoughts/my workview|my workview]] and [[thoughts/my lifeview|my lifeview]]
+[[2023-11-18]]: [[essays/a letter to the lost|a letter to the lost]]; Updates for [[thoughts/my workview|my workview]] and [[thoughts/my lifeview|my lifeview]]
 [[2023-11-19]]: Draft of [[essays/whats next for the long walk|whats next for the long walk]]
 [[2023-11-20]]: [[vignettes/on my desk my fingers walk|on my desk my fingers walk]]
 [[2023-11-21]]: [[thoughts/how to approach complex social issues|how to approach complex social issues]]; using the expansive self argument to persuade people to care for others is still selfish (see [[thoughts/buddha avoided metaphysics|Buddha avoided metaphysics]]); more ideas on [[project archives/roots x gravel/roots x gravel]]
