--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -53,7 +53,7 @@ draft: true
 [[2023-12-07]]: [[private/nspc|nspc]]
 
 [[2023-12-11]]: Things I learned from [[project archives/roots x gravel/roots x gravel]] concerning photography, writing, and walking.
-
+[[2023-12-12]]: [[private/the bus|the bus]]
 [[2023-12-13]]: Solving the latest Lea money skafu
 [[2023-12-14]]: How to prepare for my call with Andrew
 [[2023-12-15]]: Reflections after my call with Andrew
@@ -76,3 +76,5 @@ draft: true
 [[2024-01-25]]: Mind map exercises with Lea
 [[2024-01-26]]: Odyssey plans 2
 [[2024-01-30]]: [[thoughts/walking as writing methodology|walking as writing methodology]]; launch a photo walk group
+
+[[2024-02-03]]: [[poems/well|well]]
