--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -51,17 +51,18 @@ draft: true
 [[2023-12-02]]: Some thoughts on how to do the upcoming weeklong walk at LB
 [[2023-12-03]]: Draft of intro to [[project archives/roots x gravel/roots x gravel|roots x gravel]]
 [[2023-12-07]]: [[private/nspc|nspc]]
-
 [[2023-12-11]]: Things I learned from [[project archives/roots x gravel/roots x gravel]] concerning photography, writing, and walking.
 [[2023-12-12]]: [[private/the bus|the bus]]
 [[2023-12-13]]: Solving the latest Lea money skafu
 [[2023-12-14]]: How to prepare for my call with Andrew
 [[2023-12-15]]: Reflections after my call with Andrew
-
+[[2023-12-16]]: [[essays/doors|Doors]]
 [[2023-12-17]]: Drinking scene in TBOT was existential
-
+[[2023-12-18]]: [[vignettes/palaui|Palaui]]
 [[2023-12-21]]: [[vignettes/gilitan|gilitan]]
-
+[[2023-12-23]]: [[vignettes/walking with no light|walking with no light]]
+[[2023-12-25]]:
+[[2023-12-30]]:
 [[2023-12-31]]: Genre-less writing; 2024 as the year to write the book about LB; Reflections on the nagging mom outside my window
 
 [[2024-01-01]]: The first day of 2024
