--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -60,6 +60,7 @@ draft: true
 [[2023-12-17]]: Drinking scene in TBOT was existential
 [[2023-12-18]]: [[vignettes/palaui|Palaui]]
 [[2023-12-21]]: [[vignettes/gilitan|gilitan]]
+[[2023-12-22]]: [[essays/laki sulpicio|Laki Sulpicio]]
 [[2023-12-23]]: [[vignettes/walking with no light|walking with no light]]
 [[2023-12-25]]:
 [[2023-12-30]]:
@@ -81,4 +82,4 @@ draft: true
 [[2024-02-03]]: [[poems/well|well]]
 
 [[2024-02-10]]: An attempt to write a list poem for my 32nd birthday
-[[2024-02-11]]: [[poems/prayer no. 1|prayer no. 1]]
+[[2024-02-11]]: [[poems/prayer|prayer]]
