--- a/content/thoughts/2019-07-03 seeds.md
+++ b/content/thoughts/2019-07-03 seeds.md
@@ -1,3 +1,9 @@
+---
+title: 2019-07-03 seeds
+date: 2019-07-03
+tags:
+  - seeds
+---
 I am made of two parts. One wants me to stay in front of the computer all day. The other wants me to stay here near nature. It is the bad and the good according to my standards.
 
 I hear the not so distant sound of children playing and perhaps motorcycle drivers pushing their horns to make them move away.
