--- a/content/thoughts/2020-03-23 seeds.md
+++ b/content/thoughts/2020-03-23 seeds.md
@@ -1,3 +1,9 @@
+---
+title: 2020-03-23 seeds
+date: 2020-03-23
+tags:
+  - seeds
+---
 I was mistaken about my hypothesis on these fields. The land plots where there are greeneries are actually fields of mango. These were not wild plants. They were purposefully planted.
 
 I think these lands that were repeatedly toiled and planted on won't let wild plants grow easily. I'll only see that happen during the rainy season. These plots have been repeatedly used for cash crops and they'll never heal that fast.
