--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -62,8 +62,8 @@ draft: true
 [[2023-12-21]]: [[vignettes/gilitan|gilitan]]
 [[2023-12-22]]: [[essays/laki sulpicio|Laki Sulpicio]]
 [[2023-12-23]]: [[vignettes/walking with no light|walking with no light]]
-[[2023-12-25]]:
-[[2023-12-30]]:
+[[2023-12-25]]: [[vignettes/christmas eve in los baños|Christmas eve in Los Baños]]; new idioms learned
+[[2023-12-30]]: 
 [[2023-12-31]]: Genre-less writing; 2024 as the year to write the book about LB; Reflections on the nagging mom outside my window
 
 [[2024-01-01]]: The first day of 2024
