--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -80,6 +80,7 @@ draft: true
 [[2024-01-30]]: [[thoughts/walking as writing methodology|walking as writing methodology]]; launch a photo walk group
 
 [[2024-02-03]]: [[poems/well|well]]
+[[2024-02-04]]: Makiling Unclimbed (and attempt to use clustering and mapping for writing); [[poems/initial thought]]
 
 [[2024-02-10]]: An attempt to write a list poem for my 32nd birthday
 [[2024-02-11]]: [[poems/prayer|prayer]]
