--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -68,7 +68,7 @@ draft: true
 
 [[2024-01-01]]: The first day of 2024
 [[2024-01-04]]: Insights from reading BBJ; reading just a select few over and over again; reviews can be difficult
-
+[[2024-01-05]]: Rejected draft introduction for [[essays/2023 annual review|2023 annual review]]
 [[2024-01-07]]: 2024's first act of faith; Leaving Tungko
 [[daily notes/2024-01-08|2024-01-08]]: [[project archives/baguio walk/baguio walk|baguio walk]] initial plan
 [[2024-01-10]]: Missive 1 intro draft
