--- a/content/essays/uman 2023-11.md
+++ b/content/essays/uman 2023-11.md
@@ -20,7 +20,7 @@ Practicing seiza for a month has taught me a lot about being mindful of my postu
 
 ## Shinichiro Imaoka (1881–1988)
 
-Andrew also advised looking into the life of [[thoughts/shinichiro imaoka|Shinichiro Imaoka (1881–1988)]], dubbed the Emerson of Japan and the proponent of a uniquely Eastern liberal religious concept called "[[thoughts/free religion|free religion]]." Imaoka was raised a Pureland Buddhist but later converted to Anglicanism, Congregationalism, and Unitarianism before embracing his spiritual philosophy of free religion. Imaoka's life and conversions were detailed in a biography by George Williams called [[literature/cosmic sage williams|Cosmic Sage]].
+Andrew also advised looking into the life of [[thoughts/shinichiro imaoka|Shinichiro Imaoka (1881–1988)]], dubbed the Emerson of Japan and the proponent of a uniquely Eastern liberal religious concept called "[[jiyu shukyo|jiyu shukyo]]." Imaoka was raised a Pureland Buddhist but later converted to Anglicanism, Congregationalism, and Unitarianism before embracing his spiritual philosophy of free religion. Imaoka's life and conversions were detailed in a biography by George Williams called [[literature/cosmic sage williams|Cosmic Sage]].
 
 Imaoka didn't leave us a clear definition of free religion, so it can be challenging to explain the concept. However, reading and reflecting on [[imaoka creed of life|Imaoka's Creed of Life]] helps one understand free religion better. It is what I did per Andrew's advice.
 
