--- a/content/essays/uman 2023-12.md
+++ b/content/essays/uman 2023-12.md
@@ -76,7 +76,7 @@ In one of the emails I sent to my collaborator, I wrote the following:
 
 # Things Become Other Things
 
-If you've been reading me for a while, you'll notice that I often reference [[thoughts/craig mod|Craig Mod]]. While I've been playing around with writing and photography throughout my 20s and I've been a walker for as long as I can remember, Craig's work introduced me to the possibility of combining writing, photography, and walking into a single art practice. I wrote about [[essays/good art reorganizes your world|how I encountered him back in 2021]]. I've studied his work closely in the past three years by reading as many of his newsletters as I could manage, studying his systems and practices as a member of his [Special Projects membership program](https://craigmod.com/membership/), and reading his first book *[[literature/kissa by kissa mod|Kissa by Kissa]]*.
+If you've been reading me for a while, you'll notice that I often reference [[craig mod|Craig Mod]]. While I've been playing around with writing and photography throughout my 20s and I've been a walker for as long as I can remember, Craig's work introduced me to the possibility of combining writing, photography, and walking into a single art practice. I wrote about [[essays/good art reorganizes your world|how I encountered him back in 2021]]. I've studied his work closely in the past three years by reading as many of his newsletters as I could manage, studying his systems and practices as a member of his [Special Projects membership program](https://craigmod.com/membership/), and reading his first book *[[literature/kissa by kissa mod|Kissa by Kissa]]*.
 
 This December, Craig released the first edition of his second book *[[literature/things become other things mod|Things Become Other Things]]*. I read Craig primarily to study craft (vignette writing, photography, and text + image juxtaposition), and this is what I did for a good chunk of December, particularly the last week before Christmas. Every morning, I spent a couple of hours reading a few chapters and taking note of a few things I learned.
 
