--- a/content/thoughts/2023-03 to 2023-10 diary.md
+++ b/content/thoughts/2023-03 to 2023-10 diary.md
@@ -12,7 +12,7 @@ tags:
 [[2023-04-02]]: [[Sa Casa San Pablo]]
 [[2023-04-03]]: Reaffirming my decision not to try to change my family in Pangasinan
 [[2023-04-05]]: Thoughts about Chikako living with us here in LB; My mornings being less ideal once more; Some tasks for Ili and Candent website design and development; [[poems/babalik]]; Some packages for Ili Likhaan website design and development
-[[2023-04-06]]: Pagbabasa ng newsletter ni [[thoughts/craig mod]] sa damuhan; Overeating; Eskinita parallel sa Pili Drive; Proposal writing para sa Candent at Ili
+[[2023-04-06]]: Pagbabasa ng newsletter ni [[craig mod]] sa damuhan; Overeating; Eskinita parallel sa Pili Drive; Proposal writing para sa Candent at Ili
 [[2023-04-07]]: [[essays/a walk to maahas road]]
 [[2023-04-09]]: Continuation of [[essays/a walk to maahas road]]
 [[2023-04-10]]: [[Meditation–Walking–Writing]]; The possibility of working with Maui; Tasks; Returning to my own creative work after establishing more consistent income from Candent and Ili.
