--- a/content/thoughts/2023-11-24 seeds.md
+++ b/content/thoughts/2023-11-24 seeds.md
@@ -4,7 +4,7 @@ date: 2023-11-24
 tags:
   - seeds
 ---
-- [[thoughts/spirituality|spirituality]]
+- [[spirituality|spirituality]]
 - [[an aesthetic of faith and play]]
 
 Free religion
