--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -84,3 +84,6 @@ draft: true
 
 [[2024-02-10]]: An attempt to write a list poem for my 32nd birthday
 [[2024-02-11]]: [[poems/prayer|prayer]]
+[[2024-02-15]]: Be grateful for the people you have. It's not about quantity but quality.
+
+[[2024-02-24]]: Some projects and tasks for the next days
