--- a/content/thoughts/2023-10 to 2023 diary.md
+++ b/content/thoughts/2023-10 to 2023 diary.md
@@ -86,4 +86,5 @@ draft: true
 [[2024-02-11]]: [[poems/prayer|prayer]]
 [[2024-02-15]]: Be grateful for the people you have. It's not about quantity but quality.
 
-[[2024-02-24]]: Some projects and tasks for the next days
+[[2024-02-24]]: Some projects and tasks for the next days; Thoughts on whether to apply for AWA training and aid
+[[2024-02-25]]: List of things to buy to make the house more welcoming.
