style: converted footer as menu; removed distractions

--- a/content/essays/uman 2022-06.md
+++ b/content/essays/uman 2022-06.md
@@ -92,7 +92,7 @@ Of course, I also create meaning through photography. But with photography, it i
 
 ## What the Walk Taught Me About Living
 
-The [[About me|core of what I do with my life]] is to cultivate a rich inner life by learning to be alone well through a combination of experience in the real world, in space, and deep thought. In other words, walking + writing. These two are not the only fundamental parts of the life I want to live. But they make up the engine that drives this life. The gamble I am taking is that through investing about 80–90% of my efforts in the solitude that walking and writing necessitates—that is, in cultivating an unquenchable passion for this inner life through a self-directed pseudo-monastic practice—everything else falls into place. I put faith in the ability of walking + writing to nurture the virtues I want to embody as I go out and show up in the real world: deep understanding, moderation, humility, modesty, joy, and perhaps, most important of all, compassion. Given my knowledge of who I am, I don’t know if I can reverse this process. I couldn’t build a public image first a let that trickle down into my private self. It just wouldn’t work for me.
+The [[about|core of what I do with my life]] is to cultivate a rich inner life by learning to be alone well through a combination of experience in the real world, in space, and deep thought. In other words, walking + writing. These two are not the only fundamental parts of the life I want to live. But they make up the engine that drives this life. The gamble I am taking is that through investing about 80–90% of my efforts in the solitude that walking and writing necessitates—that is, in cultivating an unquenchable passion for this inner life through a self-directed pseudo-monastic practice—everything else falls into place. I put faith in the ability of walking + writing to nurture the virtues I want to embody as I go out and show up in the real world: deep understanding, moderation, humility, modesty, joy, and perhaps, most important of all, compassion. Given my knowledge of who I am, I don’t know if I can reverse this process. I couldn’t build a public image first a let that trickle down into my private self. It just wouldn’t work for me.
 
 If anything enduring came from my first long walk from Los Baños to Laguna, that is the cementing of this prioritization of inner life into my psyche. The long walk and the pain that went with it made me realize how much I am committed to the inner world that I am willing to be out in a less comfortable situation just so I can be totally in here. Publishing Uman and Lilim is important. Talking to my readers is important. Going out and meeting new people is important. Being around family and friends is important. But none is as important as doing the core of the work: enriching my inner life through walking and writing.
 
