fix: edited home page

--- a/content/essays/uman 2022-08.md
+++ b/content/essays/uman 2022-08.md
@@ -66,7 +66,7 @@ While looking for secondary resources to help me understand Henry Bugbee's *The 
 
 >My name is Andrew James Brown. I’m a philosophically/theologically inclined writer with sympathies towards Christian atheism, D. G. Leahy’s “thinking now occurring for the first time”, a Lucretian inspired religious naturalism, new materialism and Kyoto School philosophy; also a photographer, cyclist, walker and jazz bass player. In addition to this, I’m the minister of a small, liberal-religious, free-thinking community in Cambridge (UK).
 
-He got me at "philosophically/theologically inclined writer" (That's me! Well, at least the first half of it) but also at Christian atheism (I had no idea something like that existed). I read Andrew's [About](https://andrewjbrown.blogspot.com/p/about-this-blog.html) page and fell in love with the twist and turns of his life that led him to where he is now. He piqued my interest on the philosopher [[Benedict Spinoza]] and I just love this quote he uses throughout his work, a quote by the philosopher [[Herbert Fingarette]]:
+He got me at "philosophically/theologically inclined writer" (That's me! Well, at least the first half of it) but also at Christian atheism (I had no idea something like that existed). I read Andrew's [About](https://andrewjbrown.blogspot.com/p/about-this-blog.html) page and fell in love with the twist and turns of his life that led him to where he is now. He piqued my interest on the philosopher [[Benedict Spinoza]] and I just love this quote he uses throughout his work, a quote by the philosopher [[herbert fingarette]]:
 
 >"These studies are outcomes rather than realised objectives. In making the journey, I have no aims. These studies are intellectual footprints, not blueprints."
 
