--- a/content/2024-02-06 seeds.md
+++ b/content/2024-02-06 seeds.md
@@ -1,7 +1,10 @@
 ---
 title: 2024-02-06 seeds
 date: 2024-02-06
+aliases:
+  - thoughts/2024-02-06-seeds
 tags:
+  - thoughts
   - seeds
 ---
 Sometimes, the mind finds stillness through movement. Perhaps people with ADHD could attest to this.
