--- a/content/2024-02-08 seeds.md
+++ b/content/2024-02-08 seeds.md
@@ -2,6 +2,7 @@
 title: 2024-02-08 seeds
 date: 2024-02-12
 tags:
+  - thoughts
   - seeds
 ---
 Walking means multiple views, grounded views. Important to cast a wider net to things we consume: read, listen to, watch.
