--- a/content/2024-02-10 seeds.md
+++ b/content/2024-02-10 seeds.md
@@ -1,7 +1,10 @@
 ---
 title: 2024-02-10 seeds
 date: 2024-02-10
+aliases:
+  - thoughts/2024-02-10-seeds
 tags:
+  - thoughts
   - seeds
 ---
 "Bathala Wala": Prologue to a Filipino Spirituality for the Godless
