--- a/content/thoughts/2024-01-20 seeds.md
+++ b/content/thoughts/2024-01-20 seeds.md
@@ -5,7 +5,7 @@ tags:
   - seeds
 ---
 - [[neutrality is impossible]]
-- [[free religion needs some grounding]]
+- [[jiyu shukyo needs some grounding]]
 
 Might need a bit of reintegration, so stay here a bit. I could do a walk of sorts.
 
