--- a/content/thoughts/2024-02-01 seeds.md
+++ b/content/thoughts/2024-02-01 seeds.md
@@ -4,16 +4,16 @@ date: 2024-02-01
 tags:
   - seeds
 ---
-- [[poems/green fission|green fission]]
+- [[green fission|green fission]]
 
 ***
 Poetry is about being as intentional as one can be with one's words. Being economical. Minimalistic. About how one can transmit meaning with as little tools as one can.
 
-I think thall all writers ought to be poets or at least try to be one.
+I think all writers ought to be poets or at least try to be one.
 
 Essays on the other hand are where we try. Where we can be more free.
 
-Genreless writing is of course not concerned about these genres. It is about freedom.
+Genre-less writing is of course not concerned about these genres. It is about freedom.
 
 ***
 
