--- a/content/uman 2023-11.md
+++ b/content/uman 2023-11.md
@@ -57,7 +57,7 @@ These goals make sense. For writing to become a spiritual and religious practice
 
 Something was missing here, though. What the transcendentalists did with writing was turn it into a spiritual practice. But it wasn't necessarily a ministry. A ministry is a service; one must identify who to minister to. Although I love the solitary experience of writing and the challenge of improving my craft, I missed working directly with people, something I did with the Deaf in the past. How can I convert writing into a ministry that allows me to experience a similar direct connection with others?
 
-Enter [[Pat Schneider]]. I discovered her after her book *How the Light Gets In* appeared in my research on spiritual writing. While reading the Wikipedia entry about her, I learned that she developed a relatively popular writing method known as the Amherst Writers and Artists (AWA) method after the group that Schneider started. The technique was detailed in Schneider's book [[literature/writing alone and with others schneider|Writing Alone and with Others]], which I am currently reading. I have yet to finish it, but I am starting to agree with Peter Below, who wrote the Foreword of the book when he said that Schneider might be "the wisest teacher of writing I know."
+Enter [[Pat Schneider]]. I discovered her after her book *How the Light Gets In* appeared in my research on spiritual writing. While reading the Wikipedia entry about her, I learned that she developed a relatively popular writing method known as the Amherst Writers and Artists (AWA) method after the group that Schneider started. The technique was detailed in Schneider's book [[writing alone and with others schneider|Writing Alone and with Others]], which I am currently reading. I have yet to finish it, but I am starting to agree with Peter Below, who wrote the Foreword of the book when he said that Schneider might be "the wisest teacher of writing I know."
 
 Schneider used the AWA writing method in creating writing groups for writers from different walks of life and writing workshops for those who wanted to deepen their craft. What interests and inspires me the most is that Schneider started writing groups for low-income women and children and those in prison. Schneider passionately believes that everyone is a writer and that writing is a powerful method for self-actualization for all.
 
