--- a/content/2024-02-05 seeds.md
+++ b/content/2024-02-05 seeds.md
@@ -1,7 +1,10 @@
 ---
 title: 2024-02-05 seeds
 date: 2024-02-05
+aliases:
+  - thoughts/2024-02-05-seeds
 tags:
+  - thoughts
   - seeds
 ---
 - [[charles olson]]
