--- a/content/uman 2023-10.md
+++ b/content/uman 2023-10.md
@@ -61,7 +61,7 @@ Although it will be a difficult project, I still want to re-walk all the routes 
 
 After leaving Baguio, I finally accepted that I could no longer go through this long postponed grieving process alone. I needed help.
 
-I wrote an email to [[thoughts/andrew j. brown|Andrew J. Brown]], a UK-based Unitarian minister whose work is the closest thing to "religion" that I truly resonate with since leaving the church. Andrew is an atheist and yet a proponent of [[jiyu shukyo|Free Religion (自由宗教 — jiyū shūkyō)]], a liberal and creative approach to spirituality and religiosity encouraged by [[thoughts/shinichiro imaoka|Shin’ichirō Imaoka (1881-1988)]]. As I currently understand it, based on Imaoka's [Creed of Life](https://andrewjbrown.blogspot.com/2023/09/a-gentle-call-to-adopt-imaoka.html?m=1), Free Religion's aim is to deeply liberate us from our external identities, which includes the stringent rules of traditional religion, to connect us with our true selves doing so in the context of a deep reverence to our interdependence with the rest of humanity and the world.
+I wrote an email to [[thoughts/andrew j. brown|Andrew J. Brown]], a UK-based Unitarian minister whose work is the closest thing to "religion" that I truly resonate with since leaving the church. Andrew is an atheist and yet a proponent of [[jiyu shukyo|Free Religion (自由宗教 — jiyū shūkyō)]], a liberal and creative approach to spirituality and religiosity encouraged by [[shinichiro imaoka|Shin’ichirō Imaoka (1881-1988)]]. As I currently understand it, based on Imaoka's [Creed of Life](https://andrewjbrown.blogspot.com/2023/09/a-gentle-call-to-adopt-imaoka.html?m=1), Free Religion's aim is to deeply liberate us from our external identities, which includes the stringent rules of traditional religion, to connect us with our true selves doing so in the context of a deep reverence to our interdependence with the rest of humanity and the world.
 
 The minister generously returned my email and gave me advice on how to begin embracing a free and creative religious existence. Back in Los Baños, I wrote the following note to myself which integrates everything I learned from my October trip.
 
