--- a/content/2022-05-07 seeds.md
+++ b/content/2022-05-07 seeds.md
@@ -27,7 +27,7 @@ Some red bugs are attracted to a certain small plant that looks like a clover. A
 
 From here towards irri housing, the creek can be heard but difficultly seen. The leaves are thick. But it flows strongly, you can hear it.
 
-[[poems/bawat dahong namamaalam]]
+[[bawat dahong namamaalam]]
 
 An unknown bird flies by and vanishes behind a tree
 
