--- a/content/2022-12-29 seeds.md
+++ b/content/2022-12-29 seeds.md
@@ -8,7 +8,7 @@ tags:
 
 - [[contemplative exercises while walking]]
 - [[self-forgetfulness]]
-- [[poems/gabi sa campus]]
+- [[gabi sa campus]]
 - [[poems/atungal]]
 
 Things to contemplate while walking
