--- a/content/2023-04-10 seeds.md
+++ b/content/2023-04-10 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[poems/sa madamba]]
+- [[sa madamba]]
 - [[poems/browsing in the park]]
 
 Tahimik na tahimik rito sa Madamba ngayon
