--- a/content/2023-01-19 seeds.md
+++ b/content/2023-01-19 seeds.md
@@ -7,7 +7,7 @@ tags:
 ---
 
 - [[Observations at Lopez Ave]]
-- [[Walking is scouting for what is possible]]
+- [[walking is scouting for what is possible]]
 - [[thoughts/anecdotes of caring in los baños]]
 
 Ruined cafe once Rocko. I no longer remember what came before it. A perfect example of a shop trying to survive the pandemic.
