--- a/content/2023-06-19 seeds.md
+++ b/content/2023-06-19 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[thoughts/walking in cablong]]
+- [[walking in cablong]]
 
 when walking here in cablong in areas where i dont know the people and they are sitting on the side of the road, i feel uneasy. People here know everyone and so when someone is a bisita, they know. And they unintentionally express this by looking at you almost watching you walk. In this circumstance walking really becomes a performance.
 
